allow SetItemAppearance to set colors as well (even though SetItemColor can do that) add GetEntireItemAppearance and RestoreItemAppearance

--- a/plugins/funcs/Makefile.in
+++ b/plugins/funcs/Makefile.in
@@ -79,8 +79,10 @@ OFILES  = \
     funcs/hp/f_SetCurrentHitPoints.o             \
     funcs/hp/f_SetMaxHitPoints.o                 \
     funcs/hp/f_SetMaxHitPointsByLevel.o          \
+    funcs/item/f_GetEntireItemAppearance.o       \
     funcs/item/f_GetItemByPosition.o             \
     funcs/item/f_GetItemCount.o                  \
+    funcs/item/f_RestoreItemAppearance.o         \
     funcs/item/f_SetGoldPieceValue.o             \
     funcs/item/f_SetItemAppearance.o             \
     funcs/item/f_SetItemColor.o                  \
