plugins/funcs   let AddKnownSpell() go over normal spell limits
plugins/defenses
  remove some duplicate lines from the Makefile

include/structs/CNWSCreatureStats.h
  race is actually 16 bits and not 32

plugins/spells
  add spells plugin

--- a/configure.ac
+++ b/configure.ac
@@ -123,6 +123,7 @@ AC_CONFIG_FILES([
         plugins/reset/Makefile
         plugins/resman/Makefile
         plugins/ruby/Makefile
+        plugins/spells/Makefile
         plugins/structs/Makefile
         plugins/system/Makefile
         plugins/tmi/Makefile
