configure configure.ac Makefile.in   add tweaks plugin
plugin/tweaks
  add tweaks plugin (exalt version of fixes; right now fixes one crash)

plugin/spells
  do more cleanup on this plugin

lib/nwn_hooks.c
  add CNWSCreature__SendFeedbackMessage

--- a/Makefile.in
+++ b/Makefile.in
@@ -21,8 +21,10 @@ SUBDIRS = \
     plugins/profiler   \
     plugins/reset      \
     plugins/resman     \
+    plugins/spells     \
     plugins/structs    \
     plugins/tmi        \
+    plugins/tweaks     \
     plugins/weapons    \
     @EXTRAPLUGINDIRS@
 
