--- a/plugins/fixes/nwnx2.ini.sample
+++ b/plugins/fixes/nwnx2.ini.sample
@@ -1,7 +1,8 @@
 # Add this to your nwnx2.ini file
 
 [FIXES]
-copy_localvars = 0   # Copy local variables on stack split and on store transaction,
+copy_vars = 0   # Copy local variables on stack split and on store transaction,
                      # fire OnDisturbed when you merge a stack from a placeable
-check_localvars = 0  # If set to 1, items with different local vars don't stack
+compare_vars = 0  # If set to 1, items with different local vars don't stack
 keep_hidden_in_conversation = 0  # If set to 1, creatures don't unhide when they start a conversation
+hp_limit = -10  # Negative HP limit - values up to -127 are allowed
