--- a/plugins/funcs/Makefile.in
+++ b/plugins/funcs/Makefile.in
@@ -114,6 +114,7 @@ OFILES  = \
     funcs/other/f_SetSoundset.o                  \
     funcs/other/f_SetTag.o                       \
     funcs/other/f_SetTrapCreator.o               \
+    funcs/other/f_USleep.o                       \
     funcs/placeable/f_SetPlaceableAppearance.o   \
     funcs/quickbar/f_GetQuickBarSlot.o           \
     funcs/quickbar/f_SetQuickBarSlot.o           \
