add FileReadAll to read the entire contents of a file

--- a/plugins/system/Makefile.in
+++ b/plugins/system/Makefile.in
@@ -40,6 +40,7 @@ OFILES  = \
     funcs/f_FileCopy.o                           \
     funcs/f_FileLink.o                           \
     funcs/f_FileDelete.o                         \
+    funcs/f_FileReadAll.o                        \
     funcs/f_FileRename.o                         \
     funcs/f_FileSymlink.o                        \
     funcs/f_GetProcessCPUUsage.o                 \
