--- a/configure.ac
+++ b/configure.ac
@@ -109,8 +109,8 @@ AC_CHECK_LIB(z, inflateEnd,[true],[echo Unable to find -lz \(zlib\).  Please ins
 
 AC_CONFIG_FILES([
         Makefile
+        plugins/areas/Makefile
         plugins/chat/Makefile
-        plugins/db/Makefile
         plugins/defenses/Makefile
         plugins/events/Makefile
         plugins/fixes/Makefile
