--- a/plugins/defenses/Makefile.in
+++ b/plugins/defenses/Makefile.in
@@ -44,6 +44,7 @@ OFILES  = \
     funcs/f_GetEffectDamageResistance.o          \
     funcs/f_GetHasSpellImmunity.o                \
     funcs/f_GetSavingThrowVersus.o               \
+    funcs/f_GetTotalDamageImmunityDecrease.o     \
     funcs/f_GetTrueDamageImmunity.o              \
     funcs/f_IntToObject.o                        \
     funcs/f_SetDefenseOption.o                   \
