NWNX Areas 0.3.0: * Fixed the crash that was happening when a player was trying to enter the new area after removing any other area * DMs now see the new area in Creator immediately * Added SetAreaName function

--- a/plugins/areas/Makefile.in
+++ b/plugins/areas/Makefile.in
@@ -4,7 +4,7 @@ LFLAGS   = $(PLUGIN_LFLAGS)
 
 all: nwnx_areas.so
 
-nwnx_areas.so: HookFunc.o NWNXAreas.o plugin-areas.o
+nwnx_areas.so: HookFunc.o NWNXAreas.o CExoLinkedList.o CExoLocString.o plugin-areas.o
 	$(CXX) $(LFLAGS) -o $@ $^ $(LIBS)
 
 clean:
