add damage resistance increase/decrease effects

--- a/plugins/defenses/Makefile.in
+++ b/plugins/defenses/Makefile.in
@@ -55,6 +55,7 @@ OFILES  = \
     hooks/h_ConfirmCritical.o                    \
     hooks/h_GetACNaturalBase.o                   \
     hooks/h_GetDamageImmunity.o                  \
+    hooks/h_GetDamageResistance.o                \
     hooks/h_GetHasSlipperyMind.o                 \
     hooks/h_GetIsDeathAttackImmune.o             \
     hooks/h_GetIsSneakAttackImmune.o             \
