--- a/plugins/funcs/Makefile.in
+++ b/plugins/funcs/Makefile.in
@@ -117,6 +117,7 @@ OFILES  = \
     funcs/other/f_SetTag.o                       \
     funcs/other/f_SetTrapCreator.o               \
     funcs/other/f_USleep.o                       \
+    funcs/placeable/f_GetIsStatic.o              \
     funcs/placeable/f_SetPlaceableAppearance.o   \
     funcs/quickbar/f_GetQuickBarSlot.o           \
     funcs/quickbar/f_SetQuickBarSlot.o           \
