core-2.8: fix not building nwnx_ruby.so by default (but configuring it with ac)

--- a/Makefile.in
+++ b/Makefile.in
@@ -21,6 +21,7 @@ SUBDIRS = \
     plugins/profiler   \
     plugins/reset      \
     plugins/resman     \
+    plugins/ruby       \
     plugins/spells     \
     plugins/structs    \
     plugins/tmi        \
