core-2.8: add jvm to ac, don't build ruby w/ deps automatically

--- a/configure.ac
+++ b/configure.ac
@@ -117,6 +117,7 @@ AC_CONFIG_FILES([
         plugins/funcs/Makefile
         plugins/functions/Makefile
         plugins/hashset/Makefile
+        plugins/jvm/Makefile
         plugins/mnx/Makefile
         plugins/odmbc/Makefile
         plugins/profiler/Makefile
