trunk: build nwnx_visibility by default, since it has no further dependencies

--- a/Makefile.in
+++ b/Makefile.in
@@ -25,6 +25,7 @@ SUBDIRS = \
     plugins/structs    \
     plugins/tmi        \
     plugins/tweaks     \
+    plugins/visibility \
     plugins/weapons    \
     @EXTRAPLUGINDIRS@
 
