trunk: build nwnx_names automagically too

--- a/Makefile.in
+++ b/Makefile.in
@@ -17,12 +17,14 @@ SUBDIRS = \
     plugins/functions  \
     plugins/hashset    \
     plugins/mnx        \
+    plugins/names      \
     plugins/odmbc      \
     plugins/profiler   \
     plugins/reset      \
     plugins/resman     \
     plugins/spells     \
     plugins/structs    \
+    plugins/system     \
     plugins/tmi        \
     plugins/tweaks     \
     plugins/visibility \
