--- a/plugins/jvm/java/build.xml
+++ b/plugins/jvm/java/build.xml
@@ -8,7 +8,11 @@
 	</target>
 
 	<target name="compile" depends="init">
-		<javac srcdir="${src}" destdir="${build}"/>
+		<javac
+			srcdir="${src}"
+			destdir="${build}"
+			includeantruntime="false"
+			encoding="utf-8"/>
 	</target>
 
 	<target name="dist" depends="compile">
