core-2.8: merge trunk/plugins/names

--- a/Makefile.in
+++ b/Makefile.in
@@ -17,6 +17,7 @@ SUBDIRS = \
     plugins/functions  \
     plugins/hashset    \
     plugins/mnx        \
+    plugins/names      \
     plugins/odmbc      \
     plugins/profiler   \
     plugins/reset      \
