core-2.8: configure & build "db" plugin by default

--- a/Makefile.in
+++ b/Makefile.in
@@ -10,6 +10,7 @@ CPPFLAGS = @CPPFLAGS@ -Iinclude $(DEFS)
 SUBDIRS = \
     plugins/areas      \
     plugins/chat       \
+    plugins/db         \
     plugins/defenses   \
     plugins/events     \
     plugins/fixes      \
