core-2.8: build system plugin by default

--- a/Makefile.in
+++ b/Makefile.in
@@ -25,6 +25,7 @@ SUBDIRS = \
     plugins/resman     \
     plugins/spells     \
     plugins/structs    \
+    plugins/system     \
     plugins/tmi        \
     plugins/tweaks     \
     plugins/visibility \
