--- a/Makefile.in
+++ b/Makefile.in
@@ -14,6 +14,7 @@ SUBDIRS = \
     plugins/defenses   \
     plugins/dmactions  \
     plugins/events     \
+    plugins/extend     \
     plugins/fixes      \
     plugins/funcs      \
     plugins/functions  \
