core-2.8: merge axs/plugins/funcsext

--- a/Makefile.in
+++ b/Makefile.in
@@ -17,6 +17,7 @@ SUBDIRS = \
     plugins/extend     \
     plugins/fixes      \
     plugins/funcs      \
+    plugins/funcsext   \
     plugins/functions  \
     plugins/hashset    \
     plugins/mnx        \
