core-2.8: update install.sh to build everything, update nwnx2.ini & collect shared libs

--- a/plugins/odmbc/nwnx2.ini
+++ b/plugins/odmbc/nwnx2.ini
@@ -1,25 +1,22 @@
-; for sqlite3
 [ODBC2]
+; for sqlite3
 source=SQLITE
 file=./test.sqlite3
 
-; for my
-[ODBC2]
-source=MYSQL
-server=localhost
-user=username
-pass=password
-db=database
+; for mysql
+;source=MYSQL
+;server=localhost
+;user=username
+;pass=password
+;db=database
 
 ; for postgre
-[ODBC2]
-source=PGSQL
-server=localhost
-user=username
-pass=password
-db=database
+;source=PGSQL
+;server=localhost
+;user=username
+;pass=password
+;db=database
 
-; general options
-[ODBC2]
-debuglevel=10
+; Set hookscorco to false if you want to disable hooking of
+; StoreCampaignObject and RetrieveCampaignObject entirely
 hookscorco=true
