--- a/plugins/jvm/Makefile.in
+++ b/plugins/jvm/Makefile.in
@@ -1,18 +1,32 @@
 NWNXDIR = ../..
 CPPFLAGS = $(PLUGIN_CPPFLAGS) -I$(NWNXDIR) $(INC)
 LFLAGS   = $(PLUGIN_LFLAGS) -shared
-LIBS = -I${JAVA_HOME}/include/ -L${JAVA_HOME}/jre/lib/i386/server/ -ljvm
-INC = -I${JAVA_HOME}/include/ -I${JAVA_HOME}/include/linux
+LIBS = -I$(JAVA_HOME)/include/ -L$(JAVA_HOME)/jre/lib/i386/server/ -ljvm
+INC = -I$(JAVA_HOME)/include/ -I$(JAVA_HOME)/include/linux
 
 NWNXBASE=$(NWNXDIR)/NWNXBase.o $(NWNXDIR)/gline.o
 
-all: gen_const gen_native
+all: chkdep org_nwnx_nwnx2_jvm_NWScript.h java/src/org/nwnx/nwnx2/jvm/constants/All.java
 	make -C . nwnx_jvm.so java/dist/org.nwnx.nwnx2.jvm.jar
 
-.PHONY: gen_native gen_const
-gen_native:
+chkdep::
+ifndef JAVA_HOME
+JAVA_HOME=/usr/lib/jvm/java-6-sun
+endif
+chkdep::
+	@if [ ! -d $$JAVA_HOME ]; then \
+		echo "JAVA_HOME is not pointing to a valid JDK.
+		Please set it to your JDK installation directory."; \
+		exit 1; \
+	fi
+
+java/src/org/nwnx/nwnx2/jvm/NWScript.java \
+org_nwnx_nwnx2_jvm_NWScript.cpp \
+org_nwnx_nwnx2_jvm_registerNWScript.cpp \
+org_nwnx_nwnx2_jvm_NWScript.h: build/funcs.nss build/gen_java.rb
 	ruby ./build/gen_java.rb ./build/funcs.nss
-gen_const:
+
+java/src/org/nwnx/nwnx2/jvm/constants/All.java: build/consts.nss build/gen_const.rb
 	ruby ./build/gen_const.rb ./build/consts.nss
 
 nwnxjvm_NWScript.h:
@@ -22,7 +36,7 @@ nwnx_jvm.so: FunctionHooks.o NWNXJVM.o plugin-jvm.o org_nwnx_nwnx2_jvm_NWScript.
 	$(CXX) $(LFLAGS) -o $@ $^ $(LIBS) $(NWNXBASE)
 
 .PHONY: org.nwnx.nwnx2.jvm.jar
-java/dist/org.nwnx.nwnx2.jvm.jar: gen_const java/src/org/nwnx/nwnx2/jvm/NWScript.java
+java/dist/org.nwnx.nwnx2.jvm.jar: java/src/org/nwnx/nwnx2/jvm/constants/All.java java/src/org/nwnx/nwnx2/jvm/NWScript.java
 	cd java && ant -q
 
 clean:
